# cstring

./: CMakeLists.txt  CMakelists.txt  README.md  build.sh  c_string.c  c_string.h  main.c  mystring.c  mystring.h  strutil.h  test.c  xstring.c  xstring.h
example/: example.c
src/: example.c  main  main.c  strutil.h
test/: test.c
